[package]
name = "rpi"
version = "0.1.0"
edition = "2021"

[dependencies]
display-interface = "0.4"
display-interface-spi = "0.4.1"
dhatmini = { git = "https://github.com/zten/dhatmini" }
embedded-graphics = "0.7"
embedded-hal = "0.2.7"
embedded-text = "0.5.0"
rppal = { version = "0.13.1", features = ["hal"] }
linux-embedded-hal = "0.3.2"
subprocess = "0.2.8"