[package]
name = "rpi"
version = "0.1.0"
edition = "2021"

[dependencies]
display-interface = "0.4"
display-interface-spi = "0.4.1"
dhatmini = { git = "https://github.com/zten/dhatmini" }
embedded-graphics = "0.7"
embedded-hal = "0.2.7"
image = "0.24.2"
rppal = { version = "0.13.1", features = ["hal"] }
rusttype = "0.9.2"
linux-embedded-hal = "0.3.2"
subprocess = "0.2.8"

[[bin]]
name = "rpi"
path = "src/main.rs"
