[package]
name = "dhatmini"
version = "0.1.0"
edition = "2021"

[dependencies.display-interface]
version = "0.4"

[dependencies.embedded-graphics-core]
version = "0.3.2"
optional = true

[dependencies.embedded-hal]
version = "0.2"

[dependencies.heapless]
version = "0.7"
optional = true

[dependencies.nb]
version = "1.0"

[features]
batch = ["heapless", "graphics"]
buffer = []
default = ["graphics", "batch", "buffer"]
graphics = ["embedded-graphics-core"]
